--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,14 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" data-aos="fade-down" data-aos-delay="700" data-aos-once="true" style="opacity: 1;">
-        <div class="container"><a class="navbar-brand" href="#">Dexter's Website</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="index.html">Dexter's Website</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="opacity: 1;">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="padding-right: 40px;">More</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Resume</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="resume.html">Resume</a></div>
                     </li>
                 </ul>
             </div>
