--- a/resume.html
+++ b/resume.html
@@ -18,20 +18,23 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" data-aos="fade-down" data-aos-delay="700" data-aos-once="true" style="opacity: 1;">
-        <div class="container"><a class="navbar-brand" href="#">Dexter's Website</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="index.html">Dexter's Website</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="opacity: 1;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="padding-right: 40px;">More</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Resume</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item disabled" href="resume.html">Resume</a></div>
                     </li>
                 </ul>
             </div>
             <div><a href="https://github.com/munchtoast" style="color: #222222;"><i class="fa fa-github" style="transform: scale(2);margin: 5px;"></i></a></div>
         </div>
     </nav>
+    <div class="container">
+        <div class="ratio ratio-16x9" data-aos="fade" data-aos-delay="500" data-aos-once="true" style="margin-top: 50px;"><iframe src="https://drive.google.com/file/d/1z0oEWO_9Ipp2jTAHUZ9k9K15U937HRF5/preview"></iframe></div>
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
