--- a/resume.html
+++ b/resume.html
@@ -35,6 +35,16 @@
     <div class="container">
         <div class="ratio ratio-16x9" data-aos="fade" data-aos-delay="500" data-aos-once="true" style="margin-top: 50px;"><iframe src="https://drive.google.com/file/d/1z0oEWO_9Ipp2jTAHUZ9k9K15U937HRF5/preview"></iframe></div>
     </div>
+    <footer class="footer-basic">
+        <section class="features-boxed"></section>
+        <div class="social" style="padding: 30px 0px 0px;padding-bottom: 20px;"><a href="mailto: dql27@drexel.edu"><i class="icon ion-email"></i></a><a href="https://github.com/munchtoast"><i class="icon ion-social-github"></i></a><a href="https://www.linkedin.com/in/dexter-le/"><i class="icon ion-social-linkedin"></i></a></div>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="index.html">Home</a></li>
+            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+            <li class="list-inline-item"><a href="resume.html">Resume</a></li>
+            <li class="list-inline-item"></li>
+        </ul>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
