--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Home</a></li>
             <li class="list-inline-item"><a href="contact.html">Contact</a></li>
-            <li class="list-inline-item"><a href="#">Resume</a></li>
+            <li class="list-inline-item"><a href="resume.html">Resume</a></li>
             <li class="list-inline-item"></li>
         </ul>
     </footer>
