--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <div><a href="https://github.com/munchtoast" style="color: #222222;"><i class="fa fa-github" style="transform: scale(2);margin: 5px;"></i></a></div>
         </div>
     </nav>
-    <div class="container-fluid text-center" data-bss-parallax-bg="true" style="transform: perspective(0px);transform-style: preserve-3d;filter: brightness(100%);"><img class="rounded img-fluid shadow-sm flex-row flex-grow-1 flex-shrink-1 flex-fill align-content-center" data-aos="fade" data-aos-delay="500" data-aos-once="true" id="target" src="assets/img/bg.jpg" style="transform: translate3d(0px,0px,0px);filter: contrast(100%) saturate(100%) sepia(0%);"></div>
+    <div class="container-fluid text-center" data-bss-parallax-bg="true" style="transform: perspective(0px);transform-style: preserve-3d;filter: brightness(100%);margin-bottom: 50px;"><img class="rounded img-fluid shadow-sm flex-row flex-grow-1 flex-shrink-1 flex-fill align-content-center" data-aos="fade" data-aos-delay="500" data-aos-once="true" id="target" src="assets/img/bg.jpg" style="transform: translate3d(0px,0px,0px);filter: contrast(100%) saturate(100%) sepia(0%);"></div>
     <div class="container">
         <section class="features-boxed"></section>
     </div>
-    <div class="container" style="padding: 200px 201px;">
-        <div class="row">
+    <div class="container">
+        <div class="row" style="margin-top: 50px;margin-bottom: 50px;">
             <div class="col-md-6" style="padding: 40px;">
-                <picture><img class="img-fluid border rounded-pill" data-aos="fade" data-aos-duration="500" data-aos-delay="500" data-aos-once="true" src="assets/img/aaaaaaaaaaaaaaaaa.png"></picture>
+                <picture><img class="img-fluid border rounded-pill" data-aos="fade" data-aos-duration="500" data-aos-delay="500" data-aos-once="true" src="assets/img/aaaaaaaaaaaaaaaaa.png" style="transform: scale(0.50);"></picture>
             </div>
             <div class="col-md-6 text-start align-self-center" data-aos="fade" data-aos-delay="700" data-aos-once="true" style="padding: 5px 5px;">
                 <p style="font-size: 22px;margin-left: 50px;"><br>I am a rising Junior student at Drexel University, studying Computer Science and Engineering, with an interest in Machine Learning and iOS development. I enjoy both developing games and building circuits!<br><br></p>
