--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
+    <link rel="stylesheet" href="assets/css/Features-Clean.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -32,12 +34,14 @@
             <div><a href="https://github.com/munchtoast" style="color: #222222;"><i class="fa fa-github" style="transform: scale(2);margin: 5px;"></i></a></div>
         </div>
     </nav>
-    <div class="container-fluid text-center" data-bss-parallax-bg="true" style="transform: perspective(0px);transform-style: preserve-3d;filter: brightness(100%);margin-bottom: 50px;"><img class="rounded img-fluid shadow-sm flex-row flex-grow-1 flex-shrink-1 flex-fill align-content-center" data-aos="fade" data-aos-delay="500" data-aos-once="true" id="target" src="assets/img/bg.jpg" style="transform: translate3d(0px,0px,0px);filter: contrast(100%) saturate(100%) sepia(0%);"></div>
-    <div class="container">
+    <div class="container-fluid text-center overflow-hidden" data-bss-parallax-bg="true" style="transform: perspective(0px);transform-style: preserve-3d;filter: brightness(100%);">
+        <div data-bss-parallax-bg="true" id="target" style="height: 700px;background: url(&quot;assets/img/bg.jpg&quot;) bottom / auto no-repeat;margin-bottom: 100px;"></div>
+    </div>
+    <div class="container" style="margin-bottom: 50px;margin-top: 50px;">
         <section class="features-boxed"></section>
     </div>
-    <div class="container">
-        <div class="row" style="margin-top: 50px;margin-bottom: 50px;">
+    <div class="container" style="margin-top: 100px;margin-bottom: 100px;">
+        <div class="row">
             <div class="col-md-6" style="padding: 40px;">
                 <picture><img class="img-fluid border rounded-pill" data-aos="fade" data-aos-duration="500" data-aos-delay="500" data-aos-once="true" src="assets/img/aaaaaaaaaaaaaaaaa.png" style="transform: scale(0.50);"></picture>
             </div>
@@ -46,12 +50,12 @@
             </div>
         </div>
     </div>
-    <footer class="footer-basic">
+    <footer class="footer-basic" style="margin-top: 50px;">
         <section class="features-boxed">
-            <div class="container">
+            <div class="container" style="margin-top: 100px;margin-bottom: 100px;">
                 <div class="intro">
                     <h2 class="text-center" data-aos="fade" data-aos-delay="500" data-aos-once="true" style="font-size: 55px;">Personal Projects</h2>
-                    <p class="text-center" data-aos="fade" data-aos-duration="700" data-aos-delay="700">A flavor of the projects that I have been working on.</p>
+                    <p class="text-center" data-aos="fade" data-aos-duration="700" data-aos-delay="700" data-aos-once="true">A flavor of the projects that I have been working on.</p>
                 </div>
                 <div class="row justify-content-center features">
                     <div class="col-sm-6 col-md-5 col-lg-4 item">
