fix mobile view

--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
             <div class="col-md-6 text-center" style="background: rgb(241, 247, 252);">
                 <picture><img class="rounded img-fluid" data-aos="fade" data-aos-duration="600" data-aos-delay="600" data-aos-once="true" src="assets/img/aaaaaaaaaaaaaaaaa.png" style="margin-top: 25px;transform: scale(0.78);"></picture>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" style="background: rgb(241, 247, 252);">
                 <section class="contact-clean">
-                    <form data-aos="fade" data-aos-delay="600" data-aos-once="true" style="max-height: 400px;" data-bss-recipient="5de561077ee03c3e0fbdb14fd1578a68">
+                    <form data-aos="fade" data-aos-delay="600" data-aos-once="true" data-bss-recipient="5de561077ee03c3e0fbdb14fd1578a68">
                         <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div>
                         <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
                         <div class="mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
